--- a/pages/p01.md
+++ b/pages/p01.md
@@ -1,1 +1,51 @@
+# Level 1 - Decision Making - Programming Exercises #1
 
+### 1️⃣ **Calculate Bonus Points Based on Marks or Rank**
+
+**Question:**
+A school awards bonus points to students based on their exam marks or rank as per the following rules:
+
+* If a student scores **90 marks or above**, they get **50 bonus points**.
+* If the student scores between **75 and 89**, they get **30 bonus points**.
+* If the student is among the **top 3 rank holders** (Rank 1, 2, or 3), they get **40 bonus points**, regardless of marks.
+* If none of the above, the student gets **10 bonus points**.
+
+Write a Python program that:
+
+* Accepts the **marks** and **rank** of a student.
+* Calculates and prints the **bonus points** the student will receive.
+
+---
+
+### 2️⃣ **Check if a Number is a Multiple of 3 or 7**
+
+**Question:**
+Write a Python program that:
+
+* Accepts a **number** from the user.
+* Checks and displays whether the number is a **multiple of 3**, a **multiple of 7**, **both**, or **neither**.
+
+**Example Outputs:**
+
+* If the number is **21**, output: `"The number is a multiple of both 3 and 7."`
+* If the number is **9**, output: `"The number is a multiple of 3."`
+* If the number is **14**, output: `"The number is a multiple of 7."`
+* If the number is **8**, output: `"The number is neither a multiple of 3 nor 7."`
+
+---
+
+### 3️⃣ **Calculate Discount Based on Purchase Amount**
+
+**Question:**
+A store gives a discount based on the total purchase amount as per the following rules:
+
+* If the purchase amount is **above ₹5000**, the customer gets a **20% discount**.
+* If the purchase amount is between **₹3000 and ₹5000**, the customer gets a **10% discount**.
+* If the purchase amount is **below ₹3000**, the customer gets a **5% discount**.
+
+Write a Python program that:
+
+* Accepts the **purchase amount** from the user.
+* Calculates and displays the **discount amount** and the **final price after discount**.
+
+---
