--- a/pages/p02.md
+++ b/pages/p02.md
@@ -1,1 +1,62 @@
+# Level 1 - Decision Making - Programming Exercises #2
+
+## 1️⃣ **Eligibility for Choosing ISC Stream Based on ICSE Marks**
+
+### Problem Statement:
+
+Write a program to determine the eligibility of a student to choose a particular stream in ISC based on their ICSE marks in **Mathematics, Science, and English**. The eligibility criteria are as follows:
+
+| Stream          | Criteria                                     |
+| --------------- | -------------------------------------------- |
+| **Science**     | Maths ≥ 80 AND Science ≥ 80 AND English ≥ 65 |
+| **Bio Science** | Science ≥ 80 AND English ≥ 65                |
+| **Commerce**    | Maths ≥ 60 AND English ≥ 60                  |
+| **Humanities**  | English ≥ 50                                 |
+
+* The program should:
+
+  * Take input of marks in **Mathematics, Science, and English**.
+  * Check the eligibility for each stream and display all the eligible options.
+  * If the student is not eligible for any stream, display `"Not eligible for any stream."`
+  * Validate that the entered marks are between 0 and 100. If not, show `"Invalid marks entered."`
+
+---
+
+## 2️⃣ **Electricity Bill Calculation Based on Connection Type and Units Consumed**
+
+### Problem Statement:
+
+Write a program to calculate the total electricity bill amount for a customer based on:
+
+* **Units Consumed**
+* **Type of Connection:**
+
+  * **D** – Domestic
+  * **C** – Commercial
+  * **I** – Industrial
+
+#### The tariff rates are as follows:
+
+| Connection Type    | Up to 100 Units | 101 - 300 Units | Above 300 Units |
+| ------------------ | --------------- | --------------- | --------------- |
+| **Domestic (D)**   | ₹2 per unit     | ₹3.5 per unit   | ₹5 per unit     |
+| **Commercial (C)** | ₹5 per unit     | ₹7 per unit     | ₹10 per unit    |
+| **Industrial (I)** | ₹7 per unit     | ₹10 per unit    | ₹15 per unit    |
+
+* The program should:
+
+  * Input the **Type of Connection (D/C/I)** and **Units Consumed**.
+  * Validate the input type and units.
+  * Apply the slab-wise rate and calculate the total bill.
+  * Example for slab-wise:
+
+    * If Domestic and 350 units are used:
+
+      * First 100 units @ ₹2 = ₹200
+      * Next 200 units @ ₹3.5 = ₹700
+      * Remaining 50 units @ ₹5 = ₹250
+      * **Total = ₹1150**
+  * Display the final bill amount with proper labeling.
+  * If invalid type or negative units are entered, display `"Invalid input."`
+
 
