--- a/pages/p03.md
+++ b/pages/p03.md
@@ -1,1 +1,87 @@
+# Level 2 - Decision Making (Slab Based) - Programming Exercises
+
+## 1️⃣ **Cab Billing System**
+
+### Problem Statement:
+
+Write a program to calculate the **total cab fare** based on the following tariff system:
+
+* A **fixed charge** of ₹300 is applicable for the first **5 kilometers**.
+* Any distance traveled beyond **5 kilometers** is charged at **₹25 per kilometer**.
+* The program should:
+
+  * Take input of the **total kilometers traveled** (must be ≥ 0).
+  * Calculate the total fare as per the above rules.
+  * Display the bill with a breakdown:
+
+    * Fixed charge (if applicable)
+    * Additional km charge (if applicable)
+    * Total amount payable
+  * If input is invalid (negative km), display `"Invalid input."`
+
+---
+
+## 2️⃣ **Metro-Rail Workers’ Weekly Payment Calculation**
+
+### Problem Statement:
+
+Metro-Rail Workers' weekly payments are made based on the following rules:
+
+* **Minimum mandatory work hours = 40 hours per week.**
+
+* For these 40 hours, they receive **₹500 per hour (Fixed Rate)**.
+
+* Any hours beyond **40 hours** are considered **overtime** and paid according to this slab:
+
+  * **Up to 10 overtime hours** — ₹600 per hour.
+  * **Next 10 overtime hours (11 to 20)** — ₹750 per hour.
+  * **Beyond 20 overtime hours** — ₹1000 per hour.
+
+* The program should:
+
+  * Take input of **total hours worked** (must be ≥ 40).
+  * Calculate:
+
+    * Regular pay (40 hours × ₹500)
+    * Overtime pay (as per slabs)
+    * Total weekly payment
+  * Display a summary of regular pay, overtime pay, and total pay.
+  * If hours worked < 40, display `"Invalid input. Minimum 40 hours required."`
+
+---
+
+## 3️⃣ **Annual Income Tax Calculator**
+
+### Problem Statement:
+
+Write a program to calculate the **Annual Income Tax** for an individual based on their annual income, following these slabs:
+
+| Income Slab             | Tax Rate |
+| ----------------------- | -------- |
+| First ₹5,00,000         | NIL      |
+| Next ₹2,00,000          | 10%      |
+| Next ₹3,00,000          | 20%      |
+| Income above ₹10,00,000 | 30%      |
+
+* The program should:
+
+  * Take input of **annual income** (must be ≥ 0).
+  * Calculate the income tax according to the above slabs.
+  * Display:
+
+    * Tax on each slab
+    * Total tax payable
+  * If income is negative, display `"Invalid income entered."`
+
+* **Example:**
+
+  * If Income = ₹12,00,000
+
+    * First 5,00,000 → ₹0
+    * Next 2,00,000 → ₹20,000 (10%)
+    * Next 3,00,000 → ₹60,000 (20%)
+    * Remaining 2,00,000 → ₹60,000 (30%)
+    * **Total Tax = ₹1,40,000**
+
+---
 
