--- a/pages/p04.md
+++ b/pages/p04.md
@@ -1,1 +1,133 @@
+# Sum of Series - Programming Exercises
+
+### 1️⃣ Sum of First N Natural Numbers
+
+**Question:**
+Write a program to calculate the sum of the first **N** natural numbers.
+
+* Input: An integer **N**
+* Output: Sum of numbers from **1** to **N**
+* Example:
+  Input: `5`
+  Output: `15`
+  *(1 + 2 + 3 + 4 + 5 = 15)*
+
+---
+
+### 2️⃣ Sum of Squares of First N Natural Numbers
+
+**Question:**
+Write a program to calculate the sum of squares of the first **N** natural numbers.
+
+* Input: **N**
+* Output: Sum of squares from **1² + 2² + ... + N²**
+* Example:
+  Input: `3`
+  Output: `14`
+  *(1² + 2² + 3² = 14)*
+
+---
+
+### 3️⃣ Sum of First N Odd Numbers
+
+**Question:**
+Write a program that takes an integer **N** and finds the sum of the first **N** odd numbers.
+
+* Example:
+  Input: `4`
+  Output: `16`
+  *(1 + 3 + 5 + 7 = 16)*
+
+---
+
+### 4️⃣ Sum of First N Even Numbers
+
+**Question:**
+Write a program that calculates the sum of the first **N** even numbers starting from **2**.
+
+* Example:
+  Input: `5`
+  Output: `30`
+  *(2 + 4 + 6 + 8 + 10 = 30)*
+
+---
+
+### 5️⃣ Sum of a Geometric Series (GP)
+
+**Question:**
+Write a program to calculate the sum of the first **N** terms of a Geometric Progression (GP) where the first term is **a** and the common ratio is **r**.
+
+* Formula: `S = a * (1 - r^n) / (1 - r)` (if r ≠ 1)
+* Input: **a, r, N**
+* Example:
+  Input: `a = 2, r = 3, N = 4`
+  Output: `80`
+  *(2 + 6 + 18 + 54 = 80)*
+
+---
+
+### 6️⃣ Sum of a Harmonic Series up to N Terms
+
+**Question:**
+Write a program that calculates the sum of the harmonic series up to **N** terms:
+`1 + 1/2 + 1/3 + ... + 1/N`
+
+* Input: **N**
+* Example:
+  Input: `4`
+  Output: `2.0833` *(rounded to 4 decimal places)*
+
+---
+
+### 7️⃣ Sum of Fibonacci Series up to N Terms
+
+**Question:**
+Write a program to calculate the sum of the first **N** Fibonacci numbers.
+
+* Example:
+  Input: `5`
+  Output: `12`
+  *(0 + 1 + 1 + 2 + 3 + 5 = 12)*
+
+---
+
+### 8️⃣ Sum of Factorials of First N Natural Numbers
+
+**Question:**
+Write a program that calculates the sum of factorials of first **N** natural numbers.
+
+* Example:
+  Input: `3`
+  Output: `9`
+  *(1! + 2! + 3! = 1 + 2 + 6 = 9)*
+
+---
+
+### 9️⃣ Arithmetic Progression (AP) Sum with Given First Term, Common Difference
+
+**Question:**
+Write a program to calculate the sum of an arithmetic progression with given first term **a**, common difference **d**, and number of terms **N**.
+
+* Formula: `Sum = (N/2) * (2a + (N - 1) * d)`
+* Example:
+  Input: `a = 3, d = 2, N = 5`
+  Output: `35`
+
+---
+
+### 🔟 Sum of Series with Alternating Sign
+
+**Question:**
+Write a program that calculates the sum of the following series up to **N** terms:
+`1 - 2 + 3 - 4 + 5 - 6 + ...`
+
+* Example:
+  Input: `5`
+  Output: `3`
+  *(1 - 2 + 3 - 4 + 5 = 3)*
+
+---
+
+If you want, I can also write sample code snippets for these in Java, Python, or C++.
+Let me know!
 
