--- a/pages/p05.md
+++ b/pages/p05.md
@@ -1,1 +1,67 @@
+# Finding Factors of a Number - Programming Exercises
+
+### 1️⃣ **Find All Factors of a Number**
+
+> Write a program that takes an integer `n` as input and prints all of its factors in ascending order.
+
+---
+
+### 2️⃣ **Count the Total Number of Factors**
+
+> Write a program that reads an integer `n` and outputs the total count of factors of `n`.
+
+---
+
+### 3️⃣ **Sum of All Factors of a Number**
+
+> Write a program to calculate and return the sum of all distinct factors of a given integer `n`.
+
+---
+
+### 4️⃣ **Check if a Number is Prime using Factors**
+
+> Write a program that determines if a given integer `n` is a prime number by counting its factors.
+> *(Hint: A prime number has exactly two distinct factors: 1 and itself)*
+
+---
+
+### 5️⃣ **Efficient Factor Finder (Up to √n)**
+
+> Write an optimized program to find all factors of a number `n` by iterating only up to `√n`.
+> Ensure that both factors of each divisor pair are printed.
+
+---
+
+### 6️⃣ **Check if a Number is a Perfect Number**
+
+> A **perfect number** is a positive integer that is equal to the sum of its **proper factors** (all positive divisors excluding the number itself).
+> Write a program that checks if a given number `n` is a perfect number.
+> *(Example: 28 → Factors: 1, 2, 4, 7, 14 → Sum = 28 → Perfect Number)*
+
+---
+
+### 7️⃣ **List Factors in Sorted Order without Using Sort Function**
+
+> Given an integer `n`, write a program that prints all factors in ascending order **without using any sorting function**.
+> Use the logic of factors coming in pairs around √n.
+
+---
+
+### 8️⃣ **Common Factors of Two Numbers**
+
+> Write a program that takes two integers `a` and `b` and prints all their common factors in ascending order.
+
+---
+
+### 9️⃣ **Greatest Common Divisor (GCD) using Factors**
+
+> Write a program that finds the greatest common divisor (GCD) of two integers `a` and `b` by generating and comparing their factors.
+
+---
+
+### 🔟 **Find All Factor Pairs of a Number with Product Equal to the Number**
+
+> Write a program that lists all pairs `(a, b)` such that `a * b = n` and `a ≤ b`.
+> For example, for `n = 36`, output pairs like `(1,36), (2,18), (3,12), (4,9), (6,6)`.
+
 
