--- a/pages/p06.md
+++ b/pages/p06.md
@@ -1,1 +1,151 @@
+# Separating Digits of a Number : Programming Problems
+
+### 1️⃣ **Sum of Digits of a Number**
+
+> **Description:**
+> Write a program to calculate the sum of digits of a given positive integer.
+> **Example:**
+> Input: `1234` → Output: `10`
+> **Hint for Students:** Use modulo (`%`) and integer division (`//` or `/`) to extract digits one by one.
+
+---
+
+### 2️⃣ **Product of Digits of a Number**
+
+> **Description:**
+> Find the product of all digits in a given positive integer.
+> **Example:**
+> Input: `234` → Output: `24` (2 × 3 × 4)
+> **Hint for Students:** Initialize product as 1 and multiply with each digit extracted.
+
+---
+
+### 3️⃣ **Check if a Number is a Palindrome**
+
+> **Description:**
+> Check whether a number reads the same forwards and backwards (e.g., 12321).
+> **Example:**
+> Input: `12321` → Output: `Palindrome`
+> **Hint for Students:** Reverse the digits and compare with the original.
+
+---
+
+### 4️⃣ **Check if a Number is an Armstrong Number**
+
+> **Description:**
+> A number is an Armstrong number if the sum of its digits raised to the power of the number of digits equals the number itself.
+> **Example:**
+> `153 = 1³ + 5³ + 3³` → Output: `Armstrong`
+> **Hint for Students:** Count digits first, then raise each digit to that power and sum.
+
+---
+
+### 5️⃣ **Reverse the Digits of a Number**
+
+> **Description:**
+> Reverse the digits of a given number and print the reversed number.
+> **Example:**
+> Input: `4567` → Output: `7654`
+> **Hint for Students:** Extract digits and build the number in reverse.
+
+---
+
+### 6️⃣ **Find the Largest Digit in a Number**
+
+> **Description:**
+> Find the maximum digit from a given number.
+> **Example:**
+> Input: `5482` → Output: `8`
+> **Hint for Students:** Compare digits while separating.
+
+---
+
+### 7️⃣ **Find the Smallest Digit in a Number**
+
+> **Description:**
+> Find the smallest digit in the given number.
+> **Example:**
+> Input: `5482` → Output: `2`
+> **Hint for Students:** Compare digits and track the smallest.
+
+---
+
+### 8️⃣ **Count the Number of Digits in a Number**
+
+> **Description:**
+> Write a program to count the digits in a given number without converting it to a string.
+> **Example:**
+> Input: `12345` → Output: `5`
+> **Hint for Students:** Keep dividing by 10 until the number becomes 0.
+
+---
+
+### 9️⃣ **Check if All Digits of a Number are Same**
+
+> **Description:**
+> Check if all digits of the given number are identical.
+> **Example:**
+> Input: `7777` → Output: `All digits are same`
+> **Hint for Students:** Compare each digit with the first extracted digit.
+
+---
+
+### 🔟 **Count Even and Odd Digits in a Number**
+
+> **Description:**
+> Find the count of even digits and odd digits separately in a given number.
+> **Example:**
+> Input: `123456` → Output: `Even=3, Odd=3`
+> **Hint for Students:** Check each digit using modulus 2.
+
+---
+
+### 1️⃣1️⃣ **Check if a Number Contains a Specific Digit**
+
+> **Description:**
+> Check whether a given digit (e.g., `5`) is present in a number.
+> **Example:**
+> Number: `4785`, Digit to check: `5` → Output: `Present`
+> **Hint for Students:** Compare each extracted digit with the given digit.
+
+---
+
+### 1️⃣2️⃣ **Sum of Squares of Digits**
+
+> **Description:**
+> Calculate the sum of the squares of each digit of a given number.
+> **Example:**
+> Input: `123` → Output: `1² + 2² + 3² = 14`
+> **Hint for Students:** Square each digit as you extract.
+
+---
+
+### 1️⃣3️⃣ **Difference Between Sum of Even and Sum of Odd Digits**
+
+> **Description:**
+> Calculate and print the difference between the sum of even digits and the sum of odd digits.
+> **Example:**
+> Input: `123456` → Output: `(2+4+6) - (1+3+5) = 6`
+> **Hint for Students:** Maintain two sums while separating digits.
+
+---
+
+### 1️⃣4️⃣ **Check if a Number is Harshad Number (Niven Number)**
+
+> **Description:**
+> A number is a Harshad number if it is divisible by the sum of its digits.
+> **Example:**
+> Input: `18` → `1 + 8 = 9` → `18 ÷ 9 = 2` → Output: `Harshad`
+> **Hint for Students:** Use sum of digits and check divisibility.
+
+---
+
+### 1️⃣5️⃣ **Find the Sum of Factorials of Digits**
+
+> **Description:**
+> Find the sum of the factorial of each digit of the given number.
+> **Example:**
+> Input: `145` → `1! + 4! + 5! = 145` → Output: `Special Number`
+> **Hint for Students:** Use factorial function and sum factorials of each digit.
+
 
