--- a/pages/p07.md
+++ b/pages/p07.md
@@ -1,1 +1,127 @@
+# **Decision-making or Iteration using Methods** - Programming Excercises
+
+---
+
+### 1️⃣ **Student Grade Calculator**
+
+* Write a method `getGrade(int marks)` that returns `"A"`, `"B"`, `"C"`, or `"Fail"` based on marks.
+* Write a method `isPassed(int marks)` that returns `true` if marks ≥ 40.
+* In `main()`, input marks for 5 subjects, print grade and pass status for each, and display overall pass/fail.
+
+---
+
+### 2️⃣ **Prime Number Analyzer**
+
+* Method `isPrime(int num)` to check if a number is prime.
+* Method `listPrimes(int start, int end)` to print all primes between `start` and `end`.
+* In `main()`, input a range and print the list of primes and their count.
+
+---
+
+### 3️⃣ **Factorial and Permutations**
+
+* Method `factorial(int n)` to calculate factorial using iteration.
+* Method `nPr(int n, int r)` to calculate permutations.
+* In `main()`, input `n` and `r`, show both factorials and permutation result.
+
+---
+
+### 4️⃣ **Odd-Even Sum Analyzer**
+
+* Method `sumOfEvens(int n)` returns the sum of even numbers up to `n`.
+* Method `sumOfOdds(int n)` returns the sum of odd numbers up to `n`.
+* In `main()`, input `n`, display both sums and which is higher.
+
+---
+
+### 5️⃣ **Number Digit Separator and Sum**
+
+* Method `separateDigits(int num)` to print each digit.
+* Method `sumOfDigits(int num)` returns the sum of digits.
+* In `main()`, input a number, display its digits and the sum.
+
+---
+
+### 6️⃣ **Temperature Converter**
+
+* Method `celsiusToFahrenheit(double c)` returns the Fahrenheit equivalent.
+* Method `fahrenheitToCelsius(double f)` returns the Celsius equivalent.
+* In `main()`, allow user to choose conversion, input value, and display result.
+
+---
+
+### 7️⃣ **Multiplication Table Generator**
+
+* Method `printTable(int num, int limit)` prints multiplication table.
+* Method `sumOfTable(int num, int limit)` returns sum of products.
+* In `main()`, input `num` and `limit`, print table and sum.
+
+---
+
+### 8️⃣ **Leap Year Checker**
+
+* Method `isLeapYear(int year)` returns `true` if leap year.
+* Method `listLeapYears(int start, int end)` prints leap years in range.
+* In `main()`, input a range and display all leap years.
+
+---
+
+### 9️⃣ **Simple Interest & Compound Interest**
+
+* Method `simpleInterest(double p, double r, double t)` returns interest.
+* Method `compoundInterest(double p, double r, double t)` returns interest.
+* In `main()`, input principal, rate, time, and show both interests.
+
+---
+
+### 🔟 **Number Pattern Generator**
+
+* Method `printRightTriangle(int rows)` prints a right-angled triangle pattern.
+* Method `printInvertedTriangle(int rows)` prints an inverted triangle.
+* In `main()`, input rows, print both patterns.
+
+---
+
+### 1️⃣1️⃣ **Vowel and Consonant Counter**
+
+* Method `countVowels(String s)` returns the count of vowels.
+* Method `countConsonants(String s)` returns the count of consonants.
+* In `main()`, input a string, display both counts.
+
+---
+
+### 1️⃣2️⃣ **Array Sum and Average**
+
+* Method `sumArray(int[] arr)` returns sum of elements.
+* Method `averageArray(int[] arr)` returns average of elements.
+* In `main()`, input array elements, display sum and average.
+
+---
+
+### 1️⃣3️⃣ **Palindrome Number Checker**
+
+* Method `isPalindrome(int num)` returns `true` if number is palindrome.
+* Method `reverseNumber(int num)` returns reversed number.
+* In `main()`, input number, check palindrome, display reverse.
+
+---
+
+### 1️⃣4️⃣ **LCM and GCD Finder**
+
+* Method `gcd(int a, int b)` returns GCD of two numbers.
+* Method `lcm(int a, int b)` returns LCM using GCD.
+* In `main()`, input two numbers, display both GCD and LCM.
+
+---
+
+### 1️⃣5️⃣ **Bill Calculator with Discounts**
+
+* Method `calculateBill(double amount)` applies discount:
+
+  * No discount for amount < 500
+  * 10% for 500 ≤ amount < 1000
+  * 20% for amount ≥ 1000
+* Method `applyGST(double amount)` adds 5% GST.
+* In `main()`, input bill amount, apply discount, apply GST, display final bill.
+
 
