--- a/pages/p08.md
+++ b/pages/p08.md
@@ -1,1 +1,159 @@
+# **One-Dimensional Array** - Programming exercises
+---
+
+### 1️⃣ **Find the Maximum and Minimum in an Array**
+
+* **Input:** An array of integers.
+* **Output:** Maximum and minimum elements in the array.
+* **Example:**
+  Input: `[12, 5, 7, 9, 25, 3]`
+  Output: `Maximum: 25, Minimum: 3`
+
+---
+
+### 2️⃣ **Calculate the Sum and Average of Array Elements**
+
+* **Input:** An array of numbers.
+* **Output:** Sum and average of elements.
+* **Example:**
+  Input: `[10, 20, 30, 40, 50]`
+  Output: `Sum: 150, Average: 30.0`
+
+---
+
+### 3️⃣ **Search for an Element in the Array**
+
+* **Input:** An array and a number to search.
+* **Output:** Position/index of the number if found; `"Not Found"` otherwise.
+* **Example:**
+  Input: `[2, 4, 6, 8, 10]`, search `8`
+  Output: `Found at index 3`
+
+---
+
+### 4️⃣ **Sort an Array in Ascending Order**
+
+* **Input:** An array of integers.
+* **Output:** Sorted array in ascending order.
+* **Example:**
+  Input: `[5, 2, 9, 1, 6]`
+  Output: `[1, 2, 5, 6, 9]`
+
+---
+
+### 5️⃣ **Reverse an Array**
+
+* **Input:** An array.
+* **Output:** The array reversed.
+* **Example:**
+  Input: `[1, 2, 3, 4, 5]`
+  Output: `[5, 4, 3, 2, 1]`
+
+---
+
+### 6️⃣ **Count Even and Odd Numbers in the Array**
+
+* **Input:** An array of integers.
+* **Output:** Count of even and odd numbers.
+* **Example:**
+  Input: `[1, 2, 3, 4, 5, 6]`
+  Output: `Even: 3, Odd: 3`
+
+---
+
+### 7️⃣ **Find Second Largest Element in the Array**
+
+* **Input:** An array of integers.
+* **Output:** The second largest element.
+* **Example:**
+  Input: `[10, 50, 20, 40, 30]`
+  Output: `Second Largest: 40`
+
+---
+
+### 8️⃣ **Check if Array is Sorted (Ascending)**
+
+* **Input:** An array.
+* **Output:** `"Sorted"` if in ascending order; `"Not Sorted"` otherwise.
+* **Example:**
+  Input: `[1, 2, 3, 4, 5]`
+  Output: `"Sorted"`
+
+---
+
+### 9️⃣ **Remove Duplicates from the Array**
+
+* **Input:** An array with possible duplicates.
+* **Output:** Array without duplicates.
+* **Example:**
+  Input: `[1, 2, 2, 3, 4, 4, 5]`
+  Output: `[1, 2, 3, 4, 5]`
+
+---
+
+### 🔟 **Merge Two Arrays into One**
+
+* **Input:** Two arrays.
+* **Output:** A merged array with all elements of both arrays.
+* **Example:**
+  Input: `[1, 3, 5]` and `[2, 4, 6]`
+  Output: `[1, 3, 5, 2, 4, 6]`
+
+---
+
+### 1️⃣1️⃣ **Find the Frequency of Each Element**
+
+* **Input:** An array.
+* **Output:** Frequency of each unique element.
+* **Example:**
+  Input: `[2, 3, 2, 4, 3, 4, 4]`
+  Output:
+
+  ```
+  2: 2 times
+  3: 2 times
+  4: 3 times
+  ```
+
+---
+
+### 1️⃣2️⃣ **Shift Elements to Left by One Position**
+
+* **Input:** An array.
+* **Output:** Array after shifting all elements left by one; first element moves to the end.
+* **Example:**
+  Input: `[10, 20, 30, 40, 50]`
+  Output: `[20, 30, 40, 50, 10]`
+
+---
+
+### 1️⃣3️⃣ **Insert an Element at a Specific Position**
+
+* **Input:** An array, element to insert, position.
+* **Output:** Array after insertion.
+* **Example:**
+  Input: `[1, 2, 4, 5]`, insert `3` at position `2`
+  Output: `[1, 2, 3, 4, 5]`
+
+---
+
+### 1️⃣4️⃣ **Delete an Element from a Specific Position**
+
+* **Input:** An array, position of element to delete.
+* **Output:** Array after deletion.
+* **Example:**
+  Input: `[1, 2, 3, 4, 5]`, delete position `3`
+  Output: `[1, 2, 3, 5]`
+
+---
+
+### 1️⃣5️⃣ **Find Pair of Elements with Given Sum**
+
+* **Input:** An array and a target sum.
+* **Output:** All pairs of elements whose sum equals the target.
+* **Example:**
+  Input: `[1, 2, 3, 4, 5]`, target `5`
+  Output: `(1, 4), (2, 3)`
+
+---
 
