--- a/pages/p09.md
+++ b/pages/p09.md
@@ -1,1 +1,279 @@
+# **Two-Dimensional Array - Programming Excercises** 
+
+---
+
+### 1️⃣ **Sum of All Elements in a 2D Array**
+
+* **Input:** A 2D array of integers.
+* **Output:** The sum of all elements.
+* **Example:**
+  Input:
+
+  ```
+  [ [1, 2, 3],
+    [4, 5, 6] ]
+  ```
+
+  Output: `Sum = 21`
+
+---
+
+### 2️⃣ **Row-wise Sum of Elements**
+
+* **Input:** A 2D array of integers.
+* **Output:** Sum of elements for each row.
+* **Example:**
+  Input:
+
+  ```
+  [ [2, 3, 4],
+    [5, 6, 7] ]
+  ```
+
+  Output:
+
+  ```
+  Row 1 Sum = 9
+  Row 2 Sum = 18
+  ```
+
+---
+
+### 3️⃣ **Column-wise Sum of Elements**
+
+* **Input:** A 2D array of integers.
+* **Output:** Sum of elements for each column.
+* **Example:**
+  Input:
+
+  ```
+  [ [1, 2],
+    [3, 4],
+    [5, 6] ]
+  ```
+
+  Output:
+
+  ```
+  Column 1 Sum = 9
+  Column 2 Sum = 12
+  ```
+
+---
+
+### 4️⃣ **Find Maximum and Minimum Element in 2D Array**
+
+* **Input:** A 2D array of integers.
+* **Output:** Maximum and minimum elements.
+* **Example:**
+  Input:
+
+  ```
+  [ [7, 2],
+    [9, 4] ]
+  ```
+
+  Output: `Maximum = 9, Minimum = 2`
+
+---
+
+### 5️⃣ **Transpose of a Matrix**
+
+* **Input:** A 2D array (matrix).
+* **Output:** The transpose of the matrix.
+* **Example:**
+  Input:
+
+  ```
+  [ [1, 2, 3],
+    [4, 5, 6] ]
+  ```
+
+  Output:
+
+  ```
+  [ [1, 4],
+    [2, 5],
+    [3, 6] ]
+  ```
+
+---
+
+### 6️⃣ **Addition of Two Matrices**
+
+* **Input:** Two matrices of the same size.
+* **Output:** Matrix after addition.
+* **Example:**
+  Input:
+
+  ```
+  A = [ [1, 2],
+        [3, 4] ]
+  B = [ [5, 6],
+        [7, 8] ]
+  ```
+
+  Output:
+
+  ```
+  [ [6, 8],
+    [10, 12] ]
+  ```
+
+---
+
+### 7️⃣ **Multiplication of Two Matrices**
+
+* **Input:** Two matrices `A` (m × n) and `B` (n × p).
+* **Output:** Product matrix of size (m × p).
+* **Example:**
+  Input:
+
+  ```
+  A = [ [1, 2],
+        [3, 4] ]
+  B = [ [2, 0],
+        [1, 2] ]
+  ```
+
+  Output:
+
+  ```
+  [ [4, 4],
+    [10, 8] ]
+  ```
+
+---
+
+### 8️⃣ **Check if Matrix is Symmetric**
+
+* **Input:** A square matrix.
+* **Output:** `"Symmetric"` if transpose equals original, else `"Not Symmetric"`.
+* **Example:**
+  Input:
+
+  ```
+  [ [1, 2],
+    [2, 1] ]
+  ```
+
+  Output: `"Symmetric"`
+
+---
+
+### 9️⃣ **Diagonal Sum of a Square Matrix**
+
+* **Input:** A square matrix.
+* **Output:** Sum of main diagonal and secondary diagonal.
+* **Example:**
+  Input:
+
+  ```
+  [ [1, 2, 3],
+    [4, 5, 6],
+    [7, 8, 9] ]
+  ```
+
+  Output: `Main Diagonal Sum = 15, Secondary Diagonal Sum = 15`
+
+---
+
+### 🔟 **Find Saddle Point in a Matrix**
+
+* **Input:** A matrix.
+* **Output:** Element which is minimum in its row and maximum in its column (if exists).
+* **Example:**
+  Input:
+
+  ```
+  [ [1, 2, 3],
+    [4, 5, 1],
+    [7, 8, 9] ]
+  ```
+
+  Output: `Saddle Point = 7`
+
+---
+
+### 1️⃣1️⃣ **Check if Matrix is Identity Matrix**
+
+* **Input:** A square matrix.
+* **Output:** `"Identity Matrix"` if diagonal elements are 1 and others 0.
+* **Example:**
+  Input:
+
+  ```
+  [ [1, 0, 0],
+    [0, 1, 0],
+    [0, 0, 1] ]
+  ```
+
+  Output: `"Identity Matrix"`
+
+---
+
+### 1️⃣2️⃣ **Spiral Order Traversal of a Matrix**
+
+* **Input:** A matrix.
+* **Output:** Elements printed in spiral order.
+* **Example:**
+  Input:
+
+  ```
+  [ [1, 2, 3],
+    [4, 5, 6],
+    [7, 8, 9] ]
+  ```
+
+  Output: `1 2 3 6 9 8 7 4 5`
+
+---
+
+### 1️⃣3️⃣ **Count Even and Odd Elements in a Matrix**
+
+* **Input:** A matrix.
+* **Output:** Count of even and odd elements.
+* **Example:**
+  Input:
+
+  ```
+  [ [2, 3],
+    [4, 5] ]
+  ```
+
+  Output: `Even = 2, Odd = 2`
+
+---
+
+### 1️⃣4️⃣ **Check if Matrix is Upper Triangular**
+
+* **Input:** A square matrix.
+* **Output:** `"Upper Triangular"` if elements below diagonal are zero.
+* **Example:**
+  Input:
+
+  ```
+  [ [1, 2, 3],
+    [0, 4, 5],
+    [0, 0, 6] ]
+  ```
+
+  Output: `"Upper Triangular"`
+
+---
+
+### 1️⃣5️⃣ **Sum of Boundary Elements of a Matrix**
+
+* **Input:** A matrix.
+* **Output:** Sum of all boundary (edge) elements.
+* **Example:**
+  Input:
+
+  ```
+  [ [1, 2, 3],
+    [4, 5, 6],
+    [7, 8, 9] ]
+  ```
+
+  Output: `Boundary Sum = 40`
 
