--- a/pages/p10.md
+++ b/pages/p10.md
@@ -1,1 +1,160 @@
+# String Handling - Programming Excercises
+
+### 1️⃣ **Count Vowels and Consonants**
+
+* **Input:** A string (sentence or word).
+* **Output:** Number of vowels and consonants in the string.
+* **Example:**
+  Input: `"Hello World"`
+  Output: `Vowels: 3, Consonants: 7`
+
+---
+
+### 2️⃣ **Reverse a String**
+
+* **Input:** A single word or sentence.
+* **Output:** The reversed string.
+* **Example:**
+  Input: `"Programming"`
+  Output: `"gnimmargorP"`
+
+---
+
+### 3️⃣ **Check Palindrome**
+
+* **Input:** A single word.
+* **Output:** `"Palindrome"` if it reads the same backward; `"Not Palindrome"` otherwise.
+* **Example:**
+  Input: `"madam"`
+  Output: `"Palindrome"`
+
+---
+
+### 4️⃣ **Count Words in a Sentence**
+
+* **Input:** A sentence with words separated by spaces.
+* **Output:** Total number of words.
+* **Example:**
+  Input: `"This is a sample sentence"`
+  Output: `5`
+
+---
+
+### 5️⃣ **Find the Longest Word**
+
+* **Input:** A sentence.
+* **Output:** The longest word in the sentence.
+* **Example:**
+  Input: `"Find the longest word here"`
+  Output: `"longest"`
+
+---
+
+### 6️⃣ **Count Occurrence of a Character**
+
+* **Input:** A string and a character.
+* **Output:** Number of times the character occurs in the string.
+* **Example:**
+  Input: `"Mississippi", 's'`
+  Output: `4`
+
+---
+
+### 7️⃣ **Check if a String is a Pangram**
+
+* **Input:** A sentence.
+* **Output:** `"Pangram"` if it contains every letter of the alphabet at least once; `"Not Pangram"` otherwise.
+* **Example:**
+  Input: `"The quick brown fox jumps over a lazy dog"`
+  Output: `"Pangram"`
+
+---
+
+### 8️⃣ **Count Uppercase, Lowercase, Digits, and Special Characters**
+
+* **Input:** A string.
+* **Output:** Count of uppercase, lowercase, digits, and special characters.
+* **Example:**
+  Input: `"Hello123!"`
+  Output: `Uppercase: 1, Lowercase: 4, Digits: 3, Special Characters: 1`
+
+---
+
+### 9️⃣ **Replace Vowels with a Specific Character**
+
+* **Input:** A string and a character.
+* **Output:** String with all vowels replaced by the given character.
+* **Example:**
+  Input: `"hello world", '*'`
+  Output: `"h*ll* w*rld"`
+
+---
+
+### 🔟 **Check Anagram**
+
+* **Input:** Two strings.
+* **Output:** `"Anagram"` if both strings contain the same characters in any order; `"Not Anagram"` otherwise.
+* **Example:**
+  Input: `"listen", "silent"`
+  Output: `"Anagram"`
+
+---
+
+### 1️⃣1️⃣ **Remove All Spaces from a String**
+
+* **Input:** A string with spaces.
+* **Output:** String with all spaces removed.
+* **Example:**
+  Input: `"remove all spaces"`
+  Output: `"removeallspaces"`
+
+---
+
+### 1️⃣2️⃣ **Extract Initials from Full Name**
+
+* **Input:** Full name as a string.
+* **Output:** Initials of the name.
+* **Example:**
+  Input: `"John Ronald Reuel Tolkien"`
+  Output: `"J.R.R.T."`
+
+---
+
+### 1️⃣3️⃣ **Capitalize First Letter of Each Word**
+
+* **Input:** A sentence.
+* **Output:** Sentence with the first letter of each word capitalized.
+* **Example:**
+  Input: `"java programming language"`
+  Output: `"Java Programming Language"`
+
+---
+
+### 1️⃣4️⃣ **Find Frequency of Each Character**
+
+* **Input:** A string.
+* **Output:** Frequency count of each unique character.
+* **Example:**
+  Input: `"hello"`
+  Output:
+
+  ```
+  h:1
+  e:1
+  l:2
+  o:1
+  ```
+
+---
+
+### 1️⃣5️⃣ **Check if String Contains Only Digits**
+
+* **Input:** A string.
+* **Output:** `"Digits only"` if the string has only digits; `"Contains other characters"` otherwise.
+* **Example:**
+  Input: `"12345"`
+  Output: `"Digits only"`
+  Input: `"123a5"`
+  Output: `"Contains other characters"`
+
 
