--- a/pages/p11.md
+++ b/pages/p11.md
@@ -1,1 +1,185 @@
+# **Class Building - Exercises** 
+
+---
+
+### 1️⃣ **Class: Student Record**
+
+* **Steps to Follow:**
+
+  * Define attributes: `name`, `rollNumber`, `marks`.
+  * Create constructor to initialize attributes.
+  * Method `displayDetails()` to print details.
+  * Method `isPassed()` returns `true` if marks ≥ 40.
+  * In main, create objects and display results.
+
+---
+
+### 2️⃣ **Class: Bank Account**
+
+* **Steps to Follow:**
+
+  * Define attributes: `accountNumber`, `accountHolderName`, `balance`.
+  * Constructor to initialize account details.
+  * Method `deposit(amount)`.
+  * Method `withdraw(amount)` (with balance check).
+  * Method `displayBalance()`.
+  * Create object and test all methods.
+
+---
+
+### 3️⃣ **Class: Employee**
+
+* **Steps to Follow:**
+
+  * Attributes: `empId`, `name`, `designation`, `basicSalary`.
+  * Constructor to initialize.
+  * Method `calculateGrossSalary()` with DA, HRA.
+  * Method `displayDetails()`.
+  * Create objects with different designations.
+
+---
+
+### 4️⃣ **Class: Rectangle**
+
+* **Steps to Follow:**
+
+  * Attributes: `length`, `breadth`.
+  * Constructor with length and breadth.
+  * Method `calculateArea()`.
+  * Method `calculatePerimeter()`.
+  * Test with various rectangle objects.
+
+---
+
+### 5️⃣ **Class: Circle**
+
+* **Steps to Follow:**
+
+  * Attributes: `radius`.
+  * Constructor with radius.
+  * Method `calculateArea()`.
+  * Method `calculateCircumference()`.
+  * Test with multiple circle objects.
+
+---
+
+### 6️⃣ **Class: Book**
+
+* **Steps to Follow:**
+
+  * Attributes: `title`, `author`, `price`.
+  * Constructor with parameters.
+  * Method `displayBookInfo()`.
+  * Method `isCostly()` returns `true` if price > 1000.
+  * Test with at least 2 book objects.
+
+---
+
+### 7️⃣ **Class: Car**
+
+* **Steps to Follow:**
+
+  * Attributes: `brand`, `model`, `year`, `price`.
+  * Constructor.
+  * Method `displayDetails()`.
+  * Method `isNewModel()` returns `true` if year ≥ 2022.
+  * Test with different car objects.
+
+---
+
+### 8️⃣ **Class: Temperature Converter**
+
+* **Steps to Follow:**
+
+  * Attributes: `temperature` in Celsius.
+  * Constructor to set temperature.
+  * Method `toFahrenheit()`.
+  * Method `toKelvin()`.
+  * Use the class to convert given temperatures.
+
+---
+
+### 9️⃣ **Class: Movie Ticket**
+
+* **Steps to Follow:**
+
+  * Attributes: `movieName`, `showTime`, `seatNumber`, `price`.
+  * Constructor to initialize.
+  * Method `displayTicket()`.
+  * Method `applyDiscount(percent)` reduces price.
+  * Test with different ticket objects.
+
+---
+
+### 🔟 **Class: Simple Calculator**
+
+* **Steps to Follow:**
+
+  * Attributes: `number1`, `number2`.
+  * Constructor.
+  * Methods: `add()`, `subtract()`, `multiply()`, `divide()`.
+  * Test operations with two numbers.
+
+---
+
+### 1️⃣1️⃣ **Class: Shopping Cart Item**
+
+* **Steps to Follow:**
+
+  * Attributes: `itemName`, `quantity`, `unitPrice`.
+  * Constructor with parameters.
+  * Method `calculateTotal()` = `quantity * unitPrice`.
+  * Method `displayItem()`.
+  * Test with multiple items.
+
+---
+
+### 1️⃣2️⃣ **Class: Library Member**
+
+* **Steps to Follow:**
+
+  * Attributes: `memberId`, `name`, `booksIssued`.
+  * Constructor.
+  * Method `issueBook()` increments `booksIssued`.
+  * Method `returnBook()` decrements `booksIssued`.
+  * Method `displayMemberInfo()`.
+  * Test for issuing and returning.
+
+---
+
+### 1️⃣3️⃣ **Class: Electricity Bill**
+
+* **Steps to Follow:**
+
+  * Attributes: `consumerNumber`, `name`, `unitsConsumed`.
+  * Constructor.
+  * Method `calculateBill()` based on slabs.
+  * Method `displayBill()`.
+  * Test with different consumption values.
+
+---
+
+### 1️⃣4️⃣ **Class: School Admission**
+
+* **Steps to Follow:**
+
+  * Attributes: `studentName`, `age`, `gradeApplied`.
+  * Constructor.
+  * Method `isEligible()` based on age and grade.
+  * Method `displayAdmissionStatus()`.
+  * Test eligibility with different cases.
+
+---
+
+### 1️⃣5️⃣ **Class: Flight Ticket**
+
+* **Steps to Follow:**
+
+  * Attributes: `passengerName`, `flightNumber`, `seatClass`, `ticketPrice`.
+  * Constructor.
+  * Method `applyClassUpgrade()` (changes seat class and adjusts price).
+  * Method `displayTicket()`.
+  * Test with different passenger cases.
+
+---
 
