--- a/pages/p12.md
+++ b/pages/p12.md
@@ -1,1 +1,216 @@
+# **Method and Constructor Overloading - Exercises** 
+---
+
+### 1️⃣ **Overloaded Area Calculator**
+
+* **Steps to Follow:**
+
+  * Create a class `AreaCalculator`.
+  * Overload method `area()`:
+
+    * `area(int side)` — area of square.
+    * `area(int length, int breadth)` — area of rectangle.
+    * `area(double radius)` — area of circle.
+  * In `main()`, test all three methods with sample values.
+
+---
+
+### 2️⃣ **Overloaded Volume Calculator**
+
+* **Steps to Follow:**
+
+  * Create a class `VolumeCalculator`.
+  * Overload method `volume()`:
+
+    * `volume(int side)` — cube.
+    * `volume(int length, int breadth, int height)` — cuboid.
+    * `volume(double radius)` — sphere.
+  * Test all in `main()`.
+
+---
+
+### 3️⃣ **Overloaded Display Details Method**
+
+* **Steps to Follow:**
+
+  * Create a class `Person`.
+  * Overload `display()` method:
+
+    * `display(String name)`
+    * `display(String name, int age)`
+    * `display(String name, int age, String city)`
+  * Create objects and call all versions in `main()`.
+
+---
+
+### 4️⃣ **Constructor Overloading in Student Class**
+
+* **Steps to Follow:**
+
+  * Create class `Student`.
+  * Overload constructors:
+
+    * `Student()`
+    * `Student(String name)`
+    * `Student(String name, int age)`
+  * Add method `display()`.
+  * Create objects using different constructors.
+
+---
+
+### 5️⃣ **Overloaded Sum Method**
+
+* **Steps to Follow:**
+
+  * Create class `Calculator`.
+  * Overload `sum()`:
+
+    * `sum(int a, int b)`
+    * `sum(double a, double b)`
+    * `sum(int a, int b, int c)`
+  * Test with various inputs.
+
+---
+
+### 6️⃣ **Overloaded Constructors for Bank Account**
+
+* **Steps to Follow:**
+
+  * Create class `BankAccount`.
+  * Overloaded constructors:
+
+    * With account number only.
+    * With account number and name.
+    * With account number, name, initial deposit.
+  * Method `displayAccount()`.
+  * Test with different constructor usages.
+
+---
+
+### 7️⃣ **Overloaded Discount Calculation**
+
+* **Steps to Follow:**
+
+  * Create class `DiscountCalculator`.
+  * Overload `calculateDiscount()`:
+
+    * For `int amount`
+    * For `double amount`
+    * For `int amount, double discountPercent`
+  * Display discounted price in each method.
+
+---
+
+### 8️⃣ **Overloaded Temperature Conversion**
+
+* **Steps to Follow:**
+
+  * Create class `TemperatureConverter`.
+  * Overload `convert()`:
+
+    * `convert(double celsius)` — to Fahrenheit.
+    * `convert(double fahrenheit, String toCelsius)` — to Celsius.
+  * Display results in `main()`.
+
+---
+
+### 9️⃣ **Overloaded Constructors for Employee Class**
+
+* **Steps to Follow:**
+
+  * Create class `Employee`.
+  * Overload constructors:
+
+    * With only `empId`.
+    * With `empId` and `name`.
+    * With `empId`, `name`, `designation`.
+  * Method `showDetails()`.
+  * Test all versions.
+
+---
+
+### 🔟 **Overloaded Method to Find Maximum**
+
+* **Steps to Follow:**
+
+  * Create class `MaxFinder`.
+  * Overload `findMax()`:
+
+    * `findMax(int a, int b)`
+    * `findMax(double a, double b)`
+    * `findMax(int a, int b, int c)`
+  * Print maximum value.
+
+---
+
+### 1️⃣1️⃣ **Overloaded Constructors for Book Class**
+
+* **Steps to Follow:**
+
+  * Class `Book`.
+  * Overload constructors:
+
+    * Only title.
+    * Title and author.
+    * Title, author, price.
+  * Method `showBook()`.
+  * Test in `main()`.
+
+---
+
+### 1️⃣2️⃣ **Overloaded Login Method**
+
+* **Steps to Follow:**
+
+  * Class `LoginManager`.
+  * Overload `login()`:
+
+    * `login(String username, String password)`
+    * `login(String username, String password, String otp)`
+  * Print success/failure messages.
+  * Test both methods.
+
+---
+
+### 1️⃣3️⃣ **Overloaded Print Pattern Method**
+
+* **Steps to Follow:**
+
+  * Class `PatternPrinter`.
+  * Overload `printPattern()`:
+
+    * `printPattern(int rows)` — prints stars.
+    * `printPattern(int rows, char symbol)` — prints symbol.
+  * Test both in `main()`.
+
+---
+
+### 1️⃣4️⃣ **Overloaded Constructors for Vehicle Class**
+
+* **Steps to Follow:**
+
+  * Class `Vehicle`.
+  * Overloaded constructors:
+
+    * Vehicle with `brand` only.
+    * With `brand` and `model`.
+    * With `brand`, `model`, `price`.
+  * Method `showVehicle()`.
+  * Create objects with each constructor.
+
+---
+
+### 1️⃣5️⃣ **Overloaded Interest Calculator**
+
+* **Steps to Follow:**
+
+  * Class `InterestCalculator`.
+  * Overload `calculateInterest()`:
+
+    * Simple interest `(double principal, double rate, int time)`
+    * Compound interest `(double principal, double rate, int time, int n)`
+  * Display interest in each case.
+
+---
+
 
