--- a/pages/p13.md
+++ b/pages/p13.md
@@ -1,1 +1,179 @@
+# **Java Encapsulation Problems - Programming Exercises** 
+
+---
+
+## 🔵 Basic Encapsulation Problems
+
+### 1️⃣ **Private Attributes with Public Getters/Setters**
+
+* **Class:** `Person`
+* **Attributes:** `private String name`, `private int age`
+* **Methods:**
+
+  * `public String getName()`
+  * `public void setName(String name)`
+  * `public int getAge()`
+  * `public void setAge(int age)`
+* **Guidance:**
+  Encapsulate attributes as `private` and allow controlled access through public methods.
+
+---
+
+### 2️⃣ **Default Access Modifier in Package**
+
+* **Class:** `PackageClass` (default class, no access modifier)
+* **Attributes:** `int packageValue` (default)
+* **Methods:** `void displayPackageValue()`
+* **Guidance:**
+  Default members are accessible within the same package only. Test access from another class in the same package.
+
+---
+
+### 3️⃣ **Protected Method Access from Subclass**
+
+* **Class:** `BaseClass`
+* **Methods:** `protected void showMessage()`
+* **Derived Class:** `SubClass` extends `BaseClass`
+* **Guidance:**
+  Access `showMessage()` from `SubClass`. Show it’s not accessible from unrelated class.
+
+---
+
+### 4️⃣ **Private Class Not Accessible Outside**
+
+* **Private Class inside Public Class:** `Outer` with `private class Inner`
+* **Guidance:**
+  `Inner` class can be used only inside `Outer` class. Test trying to create `Inner` object outside.
+
+---
+
+### 5️⃣ **Public Class with Private Constructor**
+
+* **Class:** `Singleton`
+* **Constructor:** `private Singleton()`
+* **Method:** `public static Singleton getInstance()`
+* **Guidance:**
+  Allow instance creation only through static method (Singleton Pattern).
+
+---
+
+## 🟢 Intermediate Encapsulation with Mixed Access
+
+### 6️⃣ **Protected Attributes with Access through Public Methods**
+
+* **Class:** `Employee`
+* **Attributes:** `protected double salary`
+* **Methods:** `public double getSalary()`, `public void setSalary(double)`
+* **Guidance:**
+  Allow subclasses and same package to access directly, but restrict others.
+
+---
+
+### 7️⃣ **Encapsulation in BankAccount with Validation**
+
+* **Attributes:** `private double balance`
+* **Methods:**
+
+  * `public void deposit(double amount)` — validates positive amount.
+  * `public void withdraw(double amount)` — checks balance.
+* **Guidance:**
+  Only allow controlled deposit and withdrawal using encapsulated logic.
+
+---
+
+### 8️⃣ **Default Class with Private Attributes**
+
+* **Class:** `Product` (default access)
+* **Attributes:** `private String name`, `private double price`
+* **Methods:** `public void setDetails()`, `public void displayDetails()`
+* **Guidance:**
+  Emphasize default class accessibility with private attributes and public methods.
+
+---
+
+### 9️⃣ **Protected Methods Accessed by Child Class**
+
+* **Class:** `Vehicle`
+* **Methods:** `protected void startEngine()`
+* **Child Class:** `Car` extends `Vehicle`
+* **Guidance:**
+  Access `startEngine()` in `Car`, but restrict access from other unrelated classes.
+
+---
+
+### 🔴 Advanced Encapsulation and Best Practices
+
+### 🔟 **Private Attributes with Only Getters (Immutable Class)**
+
+* **Class:** `Book`
+* **Attributes:** `private final String title`, `private final double price`
+* **Constructor:** Public, initializes attributes.
+* **Methods:** Only getters, no setters.
+* **Guidance:**
+  Use encapsulation to create immutable objects.
+
+---
+
+### 1️⃣1️⃣ **Accessing Protected Attributes in Different Package via Inheritance**
+
+* **Package 1:** `Animal` with `protected String type`
+* **Package 2:** `Dog` extends `Animal`
+* **Guidance:**
+  Use inheritance across packages. Access `type` inside `Dog` class only.
+
+---
+
+### 1️⃣2️⃣ **Private Inner Class with Public Outer Class**
+
+* **Outer Class:** `Company`
+* **Private Inner Class:** `Employee`
+* **Methods:** `Company` uses `Employee` inside its method.
+* **Guidance:**
+  Show controlled access of inner private class.
+
+---
+
+### 1️⃣3️⃣ **Using Protected Constructor**
+
+* **Class:** `Course`
+* **Constructor:** `protected Course(String courseName)`
+* **Guidance:**
+  Allow subclass or same package instantiation only.
+
+---
+
+### 1️⃣4️⃣ **Access Modifiers Mix in Multi-Class Program**
+
+* **Class 1:** `Manager` — `public`
+* **Class 2:** `Team` — `default`
+* **Attributes:** Mix of `private`, `protected`, `default`, `public`
+* **Methods:** Public for accessing/modifying data.
+* **Guidance:**
+  Use combinations to reinforce encapsulation boundary knowledge.
+
+---
+
+### 1️⃣5️⃣ **Encapsulation with Static Utility Class**
+
+* **Class:** `MathUtils`
+* **Attributes:** `private static int operationCount`
+* **Methods:**
+
+  * `public static int add(int a, int b)`
+  * `public static int getOperationCount()`
+* **Guidance:**
+  Use private static attributes with controlled public static methods.
+
+---
+
+## ✅ Key Concepts Covered:
+
+* Private attributes and methods
+* Protected access for subclass/package use
+* Default access within package
+* Public access with controlled exposure
+* Singleton and immutable class design
+* Access restrictions using inner classes
+* Use of constructors with access control
+
 
